// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component CustomRadio Can render CustomRadio with checked 1`] = `
<Fragment>
  <input
    checked={true}
    className="css-1bfy9hx"
    id="trending"
    onChange={[MockFunction]}
    type="radio"
    value="trending"
  />
  <label
    htmlFor="trending"
  >
    Trending
  </label>
</Fragment>
`;

exports[`Component CustomRadio Can render CustomRadio with unchecked 1`] = `
<Fragment>
  <input
    checked={false}
    className="css-1bfy9hx"
    id="trending"
    onChange={[MockFunction]}
    type="radio"
    value="trending"
  />
  <label
    htmlFor="trending"
  >
    Trending
  </label>
</Fragment>
`;
